--- a/src/Components/EvesOlvasmanyok.css
+++ b/src/Components/EvesOlvasmanyok.css
@@ -23,7 +23,7 @@
   
   .konyv-tabla th {
     background-color: #3a3a3a;
-    color: #00d26a;
+    color: #0e7804;
     font-weight: bold;
   }
   
