--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -76,7 +76,7 @@ h1, h2 {
 .stat-number {
     font-size: 1.5em;
     font-weight: bold;
-    color: #4CAF50;
+    color: #0e7804;
     margin-top: 8px;
 }
 
