--- a/src/Components/EvesOlvasmanyok.css
+++ b/src/Components/EvesOlvasmanyok.css
@@ -1,9 +1,8 @@
 /* Konténer */
 .eves-olvasmanyok-container {
-    padding: 20px;
+    padding: 20px 20px;
     color: white;
-    
-  padding-top: 130px
+    padding-top: 130px
   }
   
   /* Táblázat */
