--- a/src/Components/OLvasasiTerv.css
+++ b/src/Components/OLvasasiTerv.css
@@ -206,4 +206,19 @@
     padding: 30px;
     background-color: #2b2b2b;
     border-radius: 8px;
-}
+}.delete-gomb {
+    background-color: transparent;
+    color: #ff5555;
+    margin-left: 10px;
+    border: none;
+    cursor: pointer;
+    font-size: 1.1rem;
+    display: flex;
+    align-items: center;
+  }
+  
+  .delete-gomb:hover {
+    opacity: 0.7;
+    background-color: transparent;
+  }
+  
